# dotcha

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: publish.yml
dotcha/: __init__.py  generator.py  shapes.py  theme.py
examples/: bot_demo.py
